// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCard renders LongText 1`] = `
<body>
  <div>
    <a
      class="Link_linkStyle__m4v9430 Link_linkStyle_display_block__m4v9434"
      href="https://syakoo-lab.com/"
    >
      <div
        class="LinkCard_linkCardStyles_root__zxy9h80"
      >
        <div
          class="LinkCard_linkCardStyles_body__zxy9h81"
        >
          <div
            class="LinkCard_linkCardStyles_textContainer__zxy9h82 LinkCard_linkCardStyles_textContainer_lines_2__zxy9h84"
          >
            <span
              class="Text_textStyle__jzpfqde Text_textStyle_color_currentColor__jzpfqdi Text_textStyle_variants_color_currentColor__jzpfqd3 Text_textStyle_size_100__jzpfqdl Text_textStyle_variants_size_100__jzpfqd6 Text_textStyle_weight_bold__jzpfqdt"
            >
              Sample Title Sample Title Sample Title Sample Title Sample Title
            </span>
          </div>
          <div
            class="LinkCard_linkCardStyles_textContainer__zxy9h82 LinkCard_linkCardStyles_textContainer_lines_1__zxy9h83"
          >
            <span
              class="Text_textStyle__jzpfqde Text_textStyle_color_secondary__jzpfqdg Text_textStyle_variants_color_secondary__jzpfqd1 Text_textStyle_size_50__jzpfqdj Text_textStyle_variants_size_50__jzpfqd4 Text_textStyle_weight_normal__jzpfqdu"
            >
              sample description sample description sample description sample description
            </span>
          </div>
          <div
            class="Flex_flexStyle__15ivi84i Flex_flexStyle_align_center__15ivi84s Flex_flexStyle_variants_align_center__15ivi847 Flex_flexStyle_direction_row__15ivi84j Flex_flexStyle_gap_50__15ivi84x Flex_flexStyle_variants_gap_50__15ivi84c Flex_flexStyle_justify_flexStart__15ivi84l Flex_flexStyle_variants_justify_flexStart__15ivi840"
          >
            <img
              alt=""
              height="14"
              src="https://placehold.jp/3063D4/ffffff/64x64.png"
              width="14"
            />
            <span
              class="Text_textStyle__jzpfqde Text_textStyle_color_secondary__jzpfqdg Text_textStyle_variants_color_secondary__jzpfqd1 Text_textStyle_size_50__jzpfqdj Text_textStyle_variants_size_50__jzpfqd4 Text_textStyle_weight_normal__jzpfqdu"
            >
              syakoo-lab.com
            </span>
          </div>
        </div>
        <div
          class="LinkCard_linkCardStyles_thumbnailWrapper__zxy9h85"
        >
          <img
            alt="Sample Title Sample Title Sample Title Sample Title Sample Title"
            class="LinkCard_linkCardStyles_thumbnail__zxy9h86"
            src="https://placehold.jp/3063D4/ffffff/400x300.png"
          />
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`LinkCard renders Sample 1`] = `
<body>
  <div>
    <a
      class="Link_linkStyle__m4v9430 Link_linkStyle_display_block__m4v9434"
      href="https://syakoo-lab.com/"
    >
      <div
        class="LinkCard_linkCardStyles_root__zxy9h80"
      >
        <div
          class="LinkCard_linkCardStyles_body__zxy9h81"
        >
          <div
            class="LinkCard_linkCardStyles_textContainer__zxy9h82 LinkCard_linkCardStyles_textContainer_lines_2__zxy9h84"
          >
            <span
              class="Text_textStyle__jzpfqde Text_textStyle_color_currentColor__jzpfqdi Text_textStyle_variants_color_currentColor__jzpfqd3 Text_textStyle_size_100__jzpfqdl Text_textStyle_variants_size_100__jzpfqd6 Text_textStyle_weight_bold__jzpfqdt"
            >
              Sample Title
            </span>
          </div>
          <div
            class="LinkCard_linkCardStyles_textContainer__zxy9h82 LinkCard_linkCardStyles_textContainer_lines_1__zxy9h83"
          >
            <span
              class="Text_textStyle__jzpfqde Text_textStyle_color_secondary__jzpfqdg Text_textStyle_variants_color_secondary__jzpfqd1 Text_textStyle_size_50__jzpfqdj Text_textStyle_variants_size_50__jzpfqd4 Text_textStyle_weight_normal__jzpfqdu"
            >
              sample description
            </span>
          </div>
          <div
            class="Flex_flexStyle__15ivi84i Flex_flexStyle_align_center__15ivi84s Flex_flexStyle_variants_align_center__15ivi847 Flex_flexStyle_direction_row__15ivi84j Flex_flexStyle_gap_50__15ivi84x Flex_flexStyle_variants_gap_50__15ivi84c Flex_flexStyle_justify_flexStart__15ivi84l Flex_flexStyle_variants_justify_flexStart__15ivi840"
          >
            <img
              alt=""
              height="14"
              src="https://placehold.jp/3063D4/ffffff/64x64.png"
              width="14"
            />
            <span
              class="Text_textStyle__jzpfqde Text_textStyle_color_secondary__jzpfqdg Text_textStyle_variants_color_secondary__jzpfqd1 Text_textStyle_size_50__jzpfqdj Text_textStyle_variants_size_50__jzpfqd4 Text_textStyle_weight_normal__jzpfqdu"
            >
              syakoo-lab.com
            </span>
          </div>
        </div>
        <div
          class="LinkCard_linkCardStyles_thumbnailWrapper__zxy9h85"
        >
          <img
            alt="Sample Title"
            class="LinkCard_linkCardStyles_thumbnail__zxy9h86"
            src="https://placehold.jp/3063D4/ffffff/400x300.png"
          />
        </div>
      </div>
    </a>
  </div>
</body>
`;
